# AppGen-X

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  apg  noxfile.py  pyproject.toml
.github/workflows/: labeler.yml  native-package-transcripts.yml  release.yml  studio-browser-smoke.yml  tests.yml
appgen-frontend/: index.html  package.json
appgen-frontend/scripts/: browser-smoke.mjs
appgen-frontend/src/: App.css  App.tsx  ComponentPalette.tsx  DataServiceWorkbench.tsx  DesignerCanvas.tsx  DeviceApiWorkbench.tsx  Icon.tsx  InspectorPanel.tsx  PackageManager.tsx  SemanticServicePanel.tsx  StatusRail.tsx  StudioChrome.tsx  bindingCatalog.ts  catalogAudit.ts  componentCatalog.ts  dataServiceCatalog.ts  deviceApiCatalog.ts  index.css  inspectorCatalog.ts  interactionAudit.ts  packageCatalog.ts  semanticServiceContract.ts
archive/: unused-2026-05-26.MANIFEST.md
docs/: active-goal-progress.md  apc-components.md  app-generation-guide.md  architecture.md  base_features.md  composable-pbc-apps.md  deployment-guide.md  dsl-grammar.md  dsl-linter.md  dsl-tutorial.md  dsl-user-guide.md  dsl.md  ideas.md  index.md  kafka-alternatives.md  language-tutorials.md  pbc-catalog.md  pbc-industry-expansion-overlap.md  pbc-specification.md  platform-guide.md  requirements.txt  tooling.md
lang/: appgen.g4  test.ags
tests/: test_dsl_platform_surface.py  test_dsl_tooling_contracts.py  test_main.py  test_pbc_actuarial_pricing_reserving_implementation.py  test_pbc_actuarial_pricing_reserving_runtime.py  test_pbc_advertising_campaign_operations_implementation.py  test_pbc_advertising_campaign_operations_runtime.py  test_pbc_agent_contracts.py  test_pbc_agri_supply_chain_traceability_implementation.py  test_pbc_agri_supply_chain_traceability_runtime.py  test_pbc_agriculture_farm_operations_implementation.py  test_pbc_agriculture_farm_operations_runtime.py  test_pbc_airline_operations_control_implementation.py  test_pbc_airline_operations_control_runtime.py  test_pbc_airport_operations_management_implementation.py  test_pbc_airport_operations_management_runtime.py  test_pbc_ap_automation_runtime.py  test_pbc_api_gateway_mesh_implementation.py  test_pbc_api_gateway_mesh_runtime.py  test_pbc_ar_credit_implementation.py  test_pbc_ar_credit_runtime.py  test_pbc_asset_lifecycle_implementation.py  test_pbc_asset_lifecycle_runtime.py  test_pbc_audit_ledger_implementation.py  test_pbc_audit_ledger_runtime.py  test_pbc_aviation_maintenance_repair_implementation.py  test_pbc_aviation_maintenance_repair_runtime.py  test_pbc_bank_payments_clearing_runtime.py  test_pbc_banking_core_accounts_runtime.py  test_pbc_building_information_modeling_ops_runtime.py  test_pbc_capital_markets_trading_ops_runtime.py  test_pbc_capital_projects_delivery_runtime.py  test_pbc_case_knowledge_management_runtime.py  test_pbc_cdp_segmentation_runtime.py  test_pbc_checkout_processing_runtime.py  test_pbc_chemical_batch_compliance_runtime.py  test_pbc_claims_adjudication_healthcare_runtime.py  test_pbc_clinical_care_coordination_runtime.py  test_pbc_clinical_trials_management_runtime.py  test_pbc_composition_engine_runtime.py  (+135 more)
(+4812 files in other folders)
