[project]
name = "appgen"
version = "0.0.1"
description = "Appgen"
authors = [
    { name = "Nyimbi Odero", email = "nyimbi@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "click>=8.0.1",
    "flask-appbuilder>=4.8.1,<5.0.0",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "graphene>=3.2.1,<4.0.0",
    "sqlalchemy-utils>=0.40.0,<0.41.0",
    "sqlalchemy-continuum>=1.3.14,<2.0.0",
    "elasticsearch>=8.6.2,<9.0.0",
    "pillow>=12.0.0,<13.0.0",
    "sqlalchemy-mixins>=1.5.3,<2.0.0",
    "chardet>=5.1.0,<6.0.0",
    "charset-normalizer>=3.1.0,<4.0.0",
    "geoalchemy2>=0.13.1,<0.14.0",
    "humanize>=4.6.0,<5.0.0",
    "inflection>=0.5.1,<1.0.0",
    "sqlalchemy-searchable>=1.4.1,<2.0.0",
    "pydot>=1.4.2,<2.0.0",
    "plotly>=5.13.1,<6.0.0",
    "simplejson>=3.18.3,<4.0.0",
    "intervals>=0.9.2,<0.10.0",
    "pydbml>=1.0.7,<2.0.0",
    "sqlparse>=0.4.3,<0.5.0",
    "geopy>=2.3.0,<3.0.0",
    "antlr4-python3-runtime>=4.12.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/nyimbi/appgen"
Repository = "https://github.com/nyimbi/appgen"
Documentation = "https://appgen.readthedocs.io"
Changelog = "https://github.com/nyimbi/appgen/releases"

[project.scripts]
appgen = "pyAppGen.__main__:main"

[tool.poetry]
packages = [
    { include = "pyAppGen", from = "src" },
]
include = [
    { path = "src/pyAppGen/templates/*.html", format = ["sdist", "wheel"] },
    { path = "src/pyAppGen/py.typed", format = ["sdist", "wheel"] },
]
exclude = [
    ".idea/**",
    "appgen-frontend/**",
    "docs/**/*.pdf",
    "examples/**",
    "gen/**",
    "lib/**",
    "refs/**",
    "src/frontend/**",
    "src/newAppGen/**",
    "src/pyAppGen/tmp/**",
    "src/**/*.zip",
    "tmp/**",
    "*.pdf",
    "*.zip",
]
[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["pyAppGen", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
